--- a/Ids and classes.html
+++ b/Ids and classes.html
@@ -26,6 +26,8 @@
     <span class="myClass myClass2 myClass3">Second</span>
     <span class="myClass myClass2 myClass3">Third</span>
     <span class="myClass myClass2 myClass3">Fourth</span>
+    <span class="myClass myClass2 myClass3">Fifth</span>
+
 
 
 
